addcategorie getallcategorie getcategoriebyid getallarticles
